--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <p>&copy; 2024 Minhadul's Portfolio</p>
         <div class="social-links">
             <a href="#">LinkedIn</a>
-            <a href="#">GitHub</a>
+            <a href="https://github.com/MinhazulD">GitHub</a>
             <a href="#">Twitter</a>
         </div>
     </footer>
